# enclose.horse.solver

./: .gitignore  2026.01.15_map.txt  AGENTS.md  README.md  cherry_map2.txt  cherry_map3.txt  enclosure_map2.txt  portal_map.txt  pyproject.toml  requirements.txt  tiny_cherry.txt  workplan.md
data/: tile_color_stats.json
maps/: 2026.01.22_map.txt  2026.01.23_map.txt  bee_map.txt  cherry_map.txt  enclosure_map.txt  example_map.txt  golden_map.txt  portal2_map.txt  portal_calibration_map.txt  rect_map.txt
src/enclose_horse/: __init__.py  cli.py  cp_sat_solver.py  graph.py  ilp_solver.py  image_parser.py  parser.py  viz.py
src/enclose_horse/data/: tile_color_stats.json
tests/: test_image_parser.py  test_parser.py  test_solver.py
