[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enclose-horse-solver"
version = "0.1.0"
description = "Integer programming solver for the horse enclosure puzzle."
requires-python = ">=3.11"
dependencies = [
    "pulp>=2.7",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "ortools>=9.10",
]

[project.scripts]
enclose-horse = "enclose_horse.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
enclose_horse = ["data/*.json"]
